Revision history for Perl extension HTTP::BrowserDetect.

1.13 2010-08-10
    - Firefox Mobile (Fennec) is now detected as mobile RT #60186 (Jacob Rask)

1.12 2010-08-01
    - Added msn and msnmobile (Luke Saunders: f5c87a17b8fa2b09e294)
    - Added googlemobile (Luke Saunders: ec28d49d7218b43788b9)
    - SymbOS and Opera Mobi added to mobile detection RT #59817 (Jacob Rask)
    - Distribution is now managed with Dist::Zilla
    
1.11 2010-06-03
    - Added ps3 and psp (commit 85a619c9a977c0a8e403) (Alexey Surikov)

1.10 2010-05-05
    - Google toolbar no longer triggers false positive for Googlebot (Jay
      Rifkin)

1.09 2010-04-04
    - Better language detection (commit
      68025ca1a58afa1db9b4eeffe8c246d129825cc0) (Maroš Kollár)

1.08 2010-03-19
    - Added ipad(), device() and device_name() methods

1.07 2010-02-10
    - Added realplayer() and _realplayer_version() methods RT #52355 (Marc
      Sebastian Pelzer)
    - Added engine_string(), engine_version(), engine_major(), engine_minor()
      methods
    - Added Windows 7 detection (commit
      73795d8189faded8b07717e55488f128eaa00752) (Alexey Surikov)
    - Added public_version(), public_major() and public_minor() methods

1.06 2009-11-24
    - Added missing file t/useragents.yaml to MANIFEST

1.05 2009-11-23
    - Fixed RT #31847 (Mike Clarke) SCO/Unix false positives

1.04 2009-11-23
    - Moved test config to a YAML file
    - Added language() method
    - Added iphone() method
    - Added ipod() method
    - Added android() method
    - Fixed RT #12259 (guest) Netscape 6 version detection
    - Fixed RT #52007 (Josh Ritter) Chrome browser false positives
    - Added country() method

1.03 2009-10-24
    - Added mobile() method with support for various handsets (Richard Noble)
    - perltidied source

1.02 2009-10-21
    - Fixed RT #48727 (Robin Smidsrod)
        - Made "KHTML, like Gecko" not match gecko
        - Properly detect Safari version >4.0

1.01 2009-10-20