@@ -1451,12 +1451,12 @@ other: ~
 useragent: 'Opera/9.80 (S60; SymbOS; Opera Mobi/320; U; sv) Presto/2.4.15 Version/10.00'
 language: ~
 country: ~
-public_version: 9.80
-public_major: 9.80 
+public_version: 10.0
+public_major: 10.0 
 public_minor: .0
-version: 9.80 
-major: 9 
-minor: .8
+version: 10.0 
+major: 10 
+minor: .0
 ---
 browser_string: ~
 match:
